--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="رستورانت الحیات ارائه دهنده بهترین غذاهای افغانی با کیفیت عالی و خدمات سریع. سفارش آنلاین غذا با امکان تحویل در محل.">
     <meta name="keywords" content="رستورانت الحیات,غذای افغانی, سفارش آنلاین غذا, غذاهای محلی, کباب, قورمه سبزی, غذاهای خانگی">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="data.js" defer></script>
+    <script src="/alhayat/data.js" defer></script>
     <style>
         * {
             margin: 0;
